@@ -1,5 +1,6 @@
 == master
 
+* Add a generator for db migration
 * Release gems via rake-gemcutter instead of rubyforge
 
 == 0.2.0 / 2009-04-19
